name:                blockhash
version:             0.1.0.0
synopsis:            Blockhash perceptual image hash algorithm
description:
  This is a perceptual image hash calculation tool based on algorithm descibed
  in Block Mean Value Based Image Perceptual Hashing by Bian Yang, Fan Gu and
  Xiamu Niu.
homepage:            https://github.com/kseo/blockhash#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           BSD3
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable blockhash-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blockhash
  default-language:    Haskell2010

test-suite blockhash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blockhash
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/blockhash
